--- a/src/App.css
+++ b/src/App.css
@@ -43,8 +43,7 @@
 }
 
 .Navbar-wrapper {
-  margin: 10px;
-  border: 2px solid yellow;
+  text-align: center;
 }
 
 .Content-Wrapper {
@@ -55,4 +54,78 @@
 .Profile-wrapper {
   border: 2px solid green;
   margin: 10px;
+}
+
+.Cards-collection-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.card-wrapper {
+  width: 400px;
+  border: 1px solid #bcbcbc;
+  border-radius: 20px;
+  box-shadow: 6px 4px 7px -3px rgba(0, 0, 0, 0.2);
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.card-image-div {
+  height: 200px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  background-image: url(./assets//iphone12.jpg);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.card-product-name {
+  font-size: 26px;
+  text-align: center;
+  margin-top: 5px;
+  font-weight: bold;
+}
+
+.card-product-price {
+  font-size: 20px;
+  margin-top: 15px;
+  font-weight: bold;
+  margin-left: 10px;
+  color: green;
+}
+
+.card-product-description {
+  font-size: 17px;
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: justify;
+}
+
+.card-buttons-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.card-button {
+  width: 50%;
+  background: transparent;
+  border: 1px solid #bcbcbc;
+  padding: 10px 10px;
+  outline: none;
+  cursor: pointer;
+  font-size: 17px;
+  font-weight: bold;
+}
+
+.specs-button {
+  border-bottom-left-radius: 20px;
+  color: navy;
+}
+
+.cart-button {
+  border-bottom-right-radius: 20px;
+  color: green;
 }
